bpo-34974: Do not replace unexpected errors in bytes() and bytearray().

bytes and bytearray constructors converted unexpected exceptions
(e.g. MemoryError and KeyboardInterrupt) to TypeError.